kubernetes/monitoring/efk/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-log-pod
spec:
  containers:
  - name: test-log-pod
    image: busybox
    resources:
      limits:
        memory: 256Mi
        cpu: "0.5"
    args: [/bin/sh, -c,'i=0; while true; do echo "Rumeysa efk test LOG POD $i"; i=$((i+1)); sleep 1; done']
